--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
     dependencies {
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2'
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.40"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
